fix flex alignment on right side of nav, add dynamic copyright date to footer

--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -14,6 +14,7 @@
   
 .navRight {
     display: flex;
+    align-items: center;
 }
 
 .navContainer {
